# CloudSecurityAnalyzer

./: .dockerignore  .editorconfig  .firebaserc  .gitignore  .pre-commit-config.yaml  AWS_SETUP.md  DOCKER.md  Dockerfile  Makefile  README.md  apply_lint_fixes.py  docker-compose.yml  env.example  fix_python_lint.sh  lintfix.sh  package-lock.json  pyproject.toml
.firebase/: hosting.d2ViLWFwcC9vdXQ.cache
.github/workflows/: ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
cs_kit/: __init__.py
cs_kit/adapters/: __init__.py
cs_kit/adapters/prowler/: __init__.py  exceptions.py  run.py
cs_kit/cli/: config.py  main.py  main_click.py  main_simple.py  tool_registry.py
cs_kit/mappings/: __init__.py  nist_csf.yaml  soc2_type2.yaml
cs_kit/normalizer/: __init__.py  mapping.py  ocsf_models.py  parser.py  summarize.py
cs_kit/render/: __init__.py  pdf.py
cs_kit/render/templates/: __init__.py  appendix.html  base.html  cover.html  exec_summary.html  findings.html
cs_kit/web/: __init__.py  app.py
samples/: __init__.py
samples/config/: aws_basic.yaml  azure_basic.yaml  gcp_basic.yaml
samples/mappings/: cis_aws_1_4.yaml  cis_azure_1_4.yaml  cis_gcp_1_3.yaml
samples/prowler/aws/: sample_ocsf.json
scripts/: check_aws_creds.py  cleanup_aws_dev_env.py  docker-build.sh  docker-run-examples.sh  run_scan_service.py  setup_aws_dev_env.py
tests/: test_cli.py  test_compliance_mapping.py  test_config.py  test_integration_samples.py  test_ocsf_normalizer.py  test_pdf_renderer.py  test_placeholder.py  test_prowler_adapter.py  test_summarize.py  test_tool_registry.py
tests/samples/: prowler_ocsf.json
web-app/: README.md  package-lock.json  package.json
web-app/app/: layout.tsx  page.tsx
web-app/app/api/run-scan/: route.ts
web-app/app/report/: page.tsx
web-app/components/: SeverityChips.tsx  StatusChips.tsx
web-app/components/ui/: badge.tsx
web-app/fixtures/: findings_array.json  sample_report.json
